--- a/manifest.json
+++ b/manifest.json
@@ -57,6 +57,7 @@
             "wallpaper": {
                 "dark": {
                     "image": "wallpaper/dank.webm",
+					"first_frame": "wallpaper/leafs.png",
                     "text_color": "#FFFFFF",
                     "text_shadow": "#757575"
                 },
