--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-    "name": "The Dank Den2",
+    "name": "The Dank Den3",
     "description": "My discord servers personal mod :)",
     "developer": {
         "name": "M3llo"
@@ -67,7 +67,7 @@
                     "text_shadow": "#757575"
                 },
                 "light": {
-                    "image": "wallpaper/thedankden.png",
+                    "image": "wallpaper/dank.webm",
                     "first_frame": "wallpaper/leafs.jpeg",
                     "text_color": "#FFFFFF",
                     "text_shadow": "#0B000E"
